--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -176,9 +176,9 @@ layout: table_wrappers
                     {% endfor %}
 
                     <li class="aux-nav-list-item">
-                      <a href="{{ thirdOrderBrowser[1] }}" class="site-button" {% if thirdOrderBrowser[2] %} target="_blank" rel="noopener noreferrer"
+                      <a href="{{ dynamArr[1] }}" class="site-button" {% if dynamArr[2] %} target="_blank" rel="noopener noreferrer"
                         {% endif %}>
-                        {{ thirdOrderBrowser[0] }}
+                        {{ dynamArr[0] }}
                       </a>
                     </li>
 
