--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -165,33 +165,32 @@ layout: table_wrappers
                   <!-- Using thirdOrderBrowser iff secondOrderBrowser is pointing to the last iterable item: i.e: item1item2item3 -->
                   {% if forloop.last %}
 
-                    <!-- Array building in Liquid -->
-                    {% assign dynamArr = "" | split: "" %}
-                    {% assign splitter = "|" | split: "" %}
-
                     <!-- Tester: <script>console.log('{{ thirdOrderBrowser }}');</script> -->
                     <!-- Returns: itemN at each iteration with counting N (e.g.: item1, (then) item2, (then) item3) -->                    
                     {% for thirdOrderBrowser in secondOrderBrowser %}
-                      {% unless forloop.last %}
-                        {% assign dynamSingle = thirdOrderBrowser %}
-                        {% assign dynamArr = dynamArr | concat: dynamSingle %}
-                        {% assign dynamArr = dynamArr | concat: splitter %}
-                      {% endunless %}
-
-                      {% if forloop.last %}
-                        {% assign dynamSingle = thirdOrderBrowser %}
-                        {% assign dynamArr = dynamArr | concat: dynamSingle %}
-                      {% endif %}
+                      <script>
+                        var dynamArr = [];
+                        dynamArr.push('{{ thirdOrderBrowser }}');
+                      </script>
                     {% endfor %}
 
-                    <script>console.log('{{ dynamArr }}');</script>
+                    <script>console.log(dynamArr);</script>
 
-                    <li class="aux-nav-list-item">
-                      <a href="{{ dynamArr[1] }}" class="site-button" {% if dynamArr[2] %} target="_blank" rel="noopener noreferrer"
-                        {% endif %}>
-                        {{ dynamArr[0] }}
-                      </a>
-                    </li>
+                    <div id="resultant"></div>
+
+                    <script>
+                    
+                      htmlsupreme = "<li class=\"aux-nav-list-item\"><a href=\"" + dynamArr[1] + "\"" + "class=\"site-button\"";
+                      if (dynamArr[2] == true) {
+                        htmlsupreme += " target=\"_blank\" rel=\"noopener noreferrer\"";
+                      }
+                      htmlsupreme += ">" + dynamArr[0] + "</a></li>";
+
+
+                      document.getElementById("resultant").innerHTML = htmlsupreme;
+                    
+                    
+                    </script>
 
                   {% endif %}
                 {% endfor %}
