RepoLink: docsite assets updated

--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -168,18 +168,18 @@ layout: table_wrappers
                     <!-- Tester: <script>console.log('{{ thirdOrderBrowser }}');</script> -->
                     <!-- Returns: itemN at each iteration with counting N (e.g.: item1, (then) item2, (then) item3) -->                    
                     {% for thirdOrderBrowser in secondOrderBrowser %}
-                      <script>
+                      <script type="module">
                       appendToThirdOrderBrowserArray('{{ thirdOrderBrowser }}');
                       </script>
                     {% endfor %}
 
-                    <script>console.log(thirdOrderBrowserArray);</script>
+                    <script type="module">console.log(thirdOrderBrowserArray);</script>
 
                     <div id="resultant"></div>
 
                     <script>
                     
-                      htmlsupreme = "<li class=\"aux-nav-list-item\"><a href=\"" + dynamArr[1] + "\"" + "class=\"site-button\"";
+                      htmlsupreme=  "<li class=\"aux-nav-list-item\"><a href=\"" + dynamArr[1] + "\"" + "class=\"site-button\"";
                       if (dynamArr[2] == true) {
                         htmlsupreme += " target=\"_blank\" rel=\"noopener noreferrer\"";
                       }
