RepoLink: docsite assets updated

--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -175,7 +175,7 @@ layout: table_wrappers
 
                     <script type="module">console.log(thirdOrderBrowserArray);</script>
 
-                    <div id="resultant"></div>
+                    <!-- <div id="resultant"></div>
 
                     <script>
                     
@@ -189,7 +189,7 @@ layout: table_wrappers
                       document.getElementById("resultant").innerHTML = htmlsupreme;
                     
                     
-                    </script>
+                    </script> -->
 
                   {% endif %}
                 {% endfor %}
