RepoLink: docsite assets updated

--- a/docsite/_layouts/default.html
+++ b/docsite/_layouts/default.html
@@ -217,6 +217,14 @@ layout: table_wrappers
           </nav>
         {% endif %}
         <!-- End Alter -->
+
+        <!-- Start Alter -->
+        <!-- Calling "syncRetrieveTheme" -->
+        <script type="module">
+          syncRetrieveTheme();
+        </script>
+        <!-- End Alter -->
+
       </div>
       <div id="main-content-wrap" class="main-content-wrap">
         {% unless page.url == "/" %}
