--- a/docsite/_includes/nav_footer_custom.html
+++ b/docsite/_includes/nav_footer_custom.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">    
-    Powered by <b>grn::deploy::webstatic</b>. Più dettagli <a href="https://andreagrandieri.github.io/pages/grn-deploy-webstatic">qui.</a>
+    Powered by <b>grn::deploy::webstatic</b>. <a href="https://andreagrandieri.github.io/pages/grn-deploy-webstatic">Più dettagli qui.</a>
     <br><br>
     Inspired to <a href="https://github.com/just-the-docs/just-the-docs">Just the Docs</a>, a documentation theme for Jekyll.
 </footer>
