--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,7 +1,10 @@
-<!-- Importing javascript "global.js" file -->
+<!-- Importing javascript needed files -->
 <!-- src="/" is "andreagrandieri.github.io" -->
 <!-- src="./" is the current folder path. Note that you can level up (walk backwards) using "../" -->
-<script type="module" src={{ "/engine/js/global.js" | relative_url }}></script>
+<script type="module" src={{ "/engine/js/CDNQuerierEngine.js" | relative_url }}></script>
+<script type="module" src={{ "/engine/js/languageEngine.js" | relative_url }}></script>
+<script type="module" src={{ "/engine/js/NOrderBrowserEngine.js" | relative_url }}></script>
+<script type="module" src={{ "/engine/js/themeEngine.js" | relative_url }}></script>
 
 <!-- Retrive the theme asap to reduce the chance of flickering of the screen (sudden switch from light to dark) -->
 <!-- Call function "retrieveTheme" -->
