--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -160,63 +160,174 @@
   generating the nav links for a collection that includes `page`, AND `...` holds.
 {%- endcomment -%}
 
+<!-- Mixed alter -->
+<!-- Implements dynamic building of the "navbar" based on the current displayed page LANGUAGE. This is required by the "multilanguage support approach". -->
+<!-- To add other languages, first modify here using the already existing pattern. -->
 <ul class="nav-list">
-{%- for node in first_level_pages -%}
-  <!-- Start Alter -->
-  <!-- Navlist will always be expanded, even if the interested page is excluded from it -->
-  <!-- {%- unless node.nav_exclude -%} -->
-  <!-- <li class="nav-list-item{% if page.collection == include.key and page.url == node.url or page.grand_parent == node.title or page.parent == node.title and page.grand_parent == nil %} active{% endif %}"> -->
-  <!-- End Alter -->
+  <!-- Start alter -->
+  <!-- Language selector -->
   <li class="nav-list-item active">
-    {%- if node.has_children -%}
-      <a href="#" class="nav-list-expander" aria-label="toggle links in {{ node.title }} category">
-        <svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg>
-      </a>
-    {%- endif -%}
-    <a href="{{ node.url | relative_url }}" class="nav-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
-    {%- if node.has_children -%}
-      {%- assign children_list = second_level_pages
-            | where: "parent", node.title -%}
-      {%- if node.child_nav_order == 'desc' or node.child_nav_order == 'reversed' -%}
-        {%- assign children_list = children_list | reverse -%}
-      {%- endif -%}
-      <ul class="nav-list ">
-      {%- for child in children_list -%}
-        {%- unless child.nav_exclude -%}
-        <li class="nav-list-item {% if page.url == child.url or page.parent == child.title %} active{% endif %}">
-          {%- if child.has_children -%}
-            <a href="#" class="nav-list-expander" aria-label="toggle links in {{ child.title }} category">
-              <svg viewBox="0 0 24 24"><use xlink:href="#svg-arrow-right"></use></svg>
-            </a>
-          {%- endif -%}
-          <a href="{{ child.url | relative_url }}" class="nav-list-link{% if page.url == child.url %} active{% endif %}">{{ child.title }}</a>
-          {%- if child.has_children -%}
-            {%- assign grand_children_list = third_level_pages
-                  | where: "parent", child.title
-                  | where: "grand_parent", node.title -%}
-            {%- if child.child_nav_order == 'desc' or child.child_nav_order == 'reversed' -%}
-              {%- assign grand_children_list = grand_children_list | reverse -%}
-            {%- endif -%}
-            <ul class="nav-list">
-            {%- for grand_child in grand_children_list -%}
-              {%- unless grand_child.nav_exclude -%}
-              <li class="nav-list-item {% if page.url == grand_child.url %} active{% endif %}">
-                <a href="{{ grand_child.url | relative_url }}" class="nav-list-link{% if page.url == grand_child.url %} active{% endif %}">{{ grand_child.title }}</a>
-              </li>
-              {%- endunless -%}
-            {%- endfor -%}
-            </ul>
-          {%- endif -%}
-        </li>
-        {%- endunless -%}
-      {%- endfor -%}
-      </ul>
-    {%- endif -%}
+    <a href="#" class="nav-list-expander nav-list-expander-override-first" aria-label="Select Language">
+      <svg viewBox="0 0 24 24">
+        <use xlink:href="#svg-arrow-right"></use>
+      </svg>
+    </a>
+    <a class="nav-list-link nav-list-link-override-first"><div id="LINGUA"></div></a>
+    <ul class="nav-list" id="dropdown-content"></ul>
   </li>
-  <!-- Start Alter -->
-  <!-- {%- endunless -%} -->
-  <!-- End Alter -->
-{%- endfor -%}
+
+  <!-- hr for division -->
+  <hr class="hr_language_selector">
+  <!-- End alter -->
+
+  <!-- -->
+  <!-- -->
+
+  <!-- Italiano: "it" -->
+  {%- if page.lang == "it" -%}
+
+  {%- for node in first_level_pages -%}
+  {%- if node.lang == "it" and node.url contains "/it/" -%}
+
+  {%- unless node.nav_exclude -%}
+  <li
+      class="nav-list-item{% if page.collection == include.key and page.url == node.url or page.grand_parent == node.title or page.parent == node.title and page.grand_parent == nil %} active{% endif %}">
+      {%- if node.has_children -%}
+      <a href="#" class="nav-list-expander" aria-label="toggle links in {{ node.title }} category">
+          <svg viewBox="0 0 24 24">
+              <use xlink:href="#svg-arrow-right"></use>
+          </svg>
+      </a>
+      {%- endif -%}
+      <a href="{{ node.url | relative_url }}"
+          class="nav-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
+      {%- if node.has_children -%}
+      {%- assign children_list = second_level_pages
+      | where: "parent", node.title -%}
+      {%- if node.child_nav_order == 'desc' or node.child_nav_order == 'reversed' -%}
+      {%- assign children_list = children_list | reverse -%}
+      {%- endif -%}
+      <ul class="nav-list">
+          {%- for child in children_list -%}
+          {%- if child.lang == "it" and child.url contains "/it/" -%}
+
+          {%- unless child.nav_exclude -%}
+          <li class="nav-list-item {% if page.url == child.url or page.parent == child.title %} active{% endif %}">
+              {%- if child.has_children -%}
+              <a href="#" class="nav-list-expander" aria-label="toggle links in {{ child.title }} category">
+                  <svg viewBox="0 0 24 24">
+                      <use xlink:href="#svg-arrow-right"></use>
+                  </svg>
+              </a>
+              {%- endif -%}
+              <a href="{{ child.url | relative_url }}"
+                  class="nav-list-link{% if page.url == child.url %} active{% endif %}">{{ child.title }}</a>
+              {%- if child.has_children -%}
+              {%- assign grand_children_list = third_level_pages
+              | where: "parent", child.title
+              | where: "grand_parent", node.title -%}
+              {%- if child.child_nav_order == 'desc' or child.child_nav_order == 'reversed' -%}
+              {%- assign grand_children_list = grand_children_list | reverse -%}
+              {%- endif -%}
+              <ul class="nav-list">
+                  {%- for grand_child in grand_children_list -%}
+                  {%- if grand_child.lang == "it" and grand_child.url contains "/it/" -%}
+                  {%- unless grand_child.nav_exclude -%}
+                  <li class="nav-list-item {% if page.url == grand_child.url %} active{% endif %}">
+                      <a href="{{ grand_child.url | relative_url }}"
+                          class="nav-list-link{% if page.url == grand_child.url %} active{% endif %}">{{ grand_child.title }}</a>
+                  </li>
+                  {%- endunless -%}
+                  {%- endif -%}
+                  {%- endfor -%}
+              </ul>
+              {%- endif -%}
+          </li>
+          {%- endunless -%}
+          {%- endif -%}
+          {%- endfor -%}
+      </ul>
+      {%- endif -%}
+  </li>
+  {%- endunless -%}
+
+  {%- endif -%}
+  {%- endfor -%}
+
+  {%- endif -%}
+
+  <!-- English: "en" -->
+  {%- if page.lang == "en" -%}
+
+  {%- for node in first_level_pages -%}
+  {%- if node.lang == "en" and node.url contains "/en/" -%}
+
+  {%- unless node.nav_exclude -%}
+  <li
+      class="nav-list-item{% if page.collection == include.key and page.url == node.url or page.grand_parent == node.title or page.parent == node.title and page.grand_parent == nil %} active{% endif %}">
+      {%- if node.has_children -%}
+      <a href="#" class="nav-list-expander" aria-label="toggle links in {{ node.title }} category">
+          <svg viewBox="0 0 24 24">
+              <use xlink:href="#svg-arrow-right"></use>
+          </svg>
+      </a>
+      {%- endif -%}
+      <a href="{{ node.url | relative_url }}"
+          class="nav-list-link{% if page.url == node.url %} active{% endif %}">{{ node.title }}</a>
+      {%- if node.has_children -%}
+      {%- assign children_list = second_level_pages
+      | where: "parent", node.title -%}
+      {%- if node.child_nav_order == 'desc' or node.child_nav_order == 'reversed' -%}
+      {%- assign children_list = children_list | reverse -%}
+      {%- endif -%}
+      <ul class="nav-list">
+          {%- for child in children_list -%}
+          {%- if child.lang == "en" and child.url contains "/en/" -%}
+
+          {%- unless child.nav_exclude -%}
+          <li class="nav-list-item {% if page.url == child.url or page.parent == child.title %} active{% endif %}">
+              {%- if child.has_children -%}
+              <a href="#" class="nav-list-expander" aria-label="toggle links in {{ child.title }} category">
+                  <svg viewBox="0 0 24 24">
+                      <use xlink:href="#svg-arrow-right"></use>
+                  </svg>
+              </a>
+              {%- endif -%}
+              <a href="{{ child.url | relative_url }}"
+                  class="nav-list-link{% if page.url == child.url %} active{% endif %}">{{ child.title }}</a>
+              {%- if child.has_children -%}
+              {%- assign grand_children_list = third_level_pages
+              | where: "parent", child.title
+              | where: "grand_parent", node.title -%}
+              {%- if child.child_nav_order == 'desc' or child.child_nav_order == 'reversed' -%}
+              {%- assign grand_children_list = grand_children_list | reverse -%}
+              {%- endif -%}
+              <ul class="nav-list">
+                  {%- for grand_child in grand_children_list -%}
+                  {%- if grand_child.lang == "en" and grand_child.url contains "/en/" -%}
+                  {%- unless grand_child.nav_exclude -%}
+                  <li class="nav-list-item {% if page.url == grand_child.url %} active{% endif %}">
+                      <a href="{{ grand_child.url | relative_url }}"
+                          class="nav-list-link{% if page.url == grand_child.url %} active{% endif %}">{{ grand_child.title }}</a>
+                  </li>
+                  {%- endunless -%}
+                  {%- endif -%}
+                  {%- endfor -%}
+              </ul>
+              {%- endif -%}
+          </li>
+          {%- endunless -%}
+          {%- endif -%}
+          {%- endfor -%}
+      </ul>
+      {%- endif -%}
+  </li>
+  {%- endunless -%}
+
+  {%- endif -%}
+  {%- endfor -%}
+
+  {%- endif -%}
 </ul>
 
 {%- comment -%}
