--- a/_sass/color_schemes/custom_light.scss
+++ b/_sass/color_schemes/custom_light.scss
@@ -39,3 +39,27 @@
 .label-archived-color {
     background-color: #342D7E !important;
 }
+
+.label-function-visibility-color {
+    background-color: #505050 !important;
+}
+
+.hr_language_selector {
+    height: 1px;
+    padding: 0;
+    margin: 2rem 0;
+    background-color: #6e7676e3;
+    border: 0;
+}
+
+.nav-list-link-override-first {
+    // Overrides the purple color of the first link in the nav list (rule defined by the theme)
+    // Hardcoded color taken from the original theme! Should be changed if the theme one changes
+    color: #5c5962 !important;
+}
+
+.nav-list-expander-override-first {
+    // Overrides the purple color of the first link in the nav list (rule defined by the theme)
+    // Hardcoded color taken from the original theme! Should be changed if the theme one changes
+    color: #5c5962 !important;
+}
