RepoLink version B: site assets updated

--- a/_sass/color_schemes/custom_dark.scss
+++ b/_sass/color_schemes/custom_dark.scss
@@ -20,6 +20,10 @@
     color: $blue-000; 
 }
 
+.fa-gear {
+    color: $blue-000; 
+}
+
 /*******************************/
 
 // Labels custom background colors
