--- a/_sass/color_schemes/custom_light.scss
+++ b/_sass/color_schemes/custom_light.scss
@@ -20,6 +20,10 @@
     color: $purple-000; 
 }
 
+.fa-gear {
+    color: $purple-000; 
+}
+
 /*******************************/
 
 // Labels custom background colors
