RepoLink version B: site assets updated

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -227,6 +227,11 @@ layout: table_wrappers
 
       </div>
       <div id="main-content-wrap" class="main-content-wrap">
+          
+        <!-- Start Alter -->
+        <div id="broadcastTarget_engine_fetching_inErrorState"></div>
+        <!-- End Alter -->
+
         {% unless page.url == "/" %}
         {% if page.parent %}
         <nav aria-label="Breadcrumb" class="breadcrumb-nav">
