--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -5,6 +5,7 @@
 <script type="module" src={{ "/engine/js/languageEngine.js" | relative_url }}></script>
 <script type="module" src={{ "/engine/js/NOrderBrowserEngine.js" | relative_url }}></script>
 <script type="module" src={{ "/engine/js/themeEngine.js" | relative_url }}></script>
+<script type="module" src={{ "/engine/js/globalShared.js" | relative_url }}></script>
 
 <!-- Retrive the theme asap to reduce the chance of flickering of the screen (sudden switch from light to dark) -->
 <!-- Call function "retrieveTheme" -->
